ChangeLog

2004-05-08 weiden

   tools/widl/client.c
   tools/widl/proxy.c
   tools/widl/server.c

Generate code GCC4.x accepts.

2005-04-18 navaraf

   tools/widl/parser.y

Don't use pointer to freed memory.

2005-04-17 ekohl

   tools/widl/server.c

Support out-pointers to structs.

2005-04-15 ekohl

   tools/widl/client.c
   tools/widl/parser.y
   tools/widl/server.c

Support in-pointers to structs.

2005-04-03 ekohl

   tools/widl/client.c
   tools/widl/parser.l
   tools/widl/parser.y
   tools/widl/server.c
   tools/widl/widltypes.h

Support 'ref' and 'unique' attributes for pointers.

2005-03-27 Jacek Caban (from WINE)

  tools/widl/parser.y
  tools/widl/y.tab.c

Added handling of unsigned type

2005-03-25 ekohl

   tools/widl/client.c
   tools/widl/server.c

Generate code without L-value casts. Fix remaining issues.

2005-03-21 navaraf

   tools/widl/client.c

Fix a typo in write_function_stubs.

2005-03-20 navaraf

   tools/widl/client.c
   tools/widl/server.c

Generate code without L-value casts.

2005-03-20 ekohl

   tools/widl/client.c
   tools/widl/server.c

Improve error messages.
Don't start counting the type_offset for each new fuction. It is a global offset.
Use only basic types in type- and proc-strings (e.g. unsigned long -> long).


2005-03-13 ekohl

   tools/widl/server.c

Remove debug printf().


2005-03-13 jimtabor

   tools/widl/write_msft.c

Fixup *nix port, added include fcntl.h and unistd.h.


2005-03-13 royce3

   tools/widl/hash.c
   tools/widl/Makefile
   tools/widl/write_msft.c

-Wall -Werror and fix warnings


2005-03-13 ekohl

   tools/widl/client.c
   tools/widl/server.c

Implement [string] attribute for pointers to char and wchar_t.


2005-03-12 ekohl

   tools/widl/client.c
   tools/widl/server.c

Implement [in], [out] and [in, out] support for pointers to basic types.


2005-03-10 ekohl

   tools/widl/client.c
   tools/widl/header.c
   tools/widl/server.c
   tools/widl/widl.c
   tools/widl/widl.h
